# $Id: Makefile.am 1971 2009-10-01 06:37:51Z jakob $

MAINTAINERCLEANFILES = \
	config.log config.status \
	$(srcdir)/Makefile.in \
	$(srcdir)/config.h.in $(srcdir)/config.h.in~ \
	$(srcdir)/configure \
	$(srcdir)/install-sh $(srcdir)/ltmain.sh $(srcdir)/missing \
	$(srcdir)/depcomp $(srcdir)/aclocal.m4 $(srcdir)/compile \
	$(srcdir)/config.guess $(srcdir)/config.sub

SUBDIRS = solaris

sbin_SCRIPTS = ods-control

man5_MANS = ods-timing.5
man7_MANS = opendnssec.7
man8_MANS = ods-control.8
